--- a/samples/ConceptTagger/cpp/ConceptTaggerSample_Desktop/packages.config
+++ b/samples/ConceptTagger/cpp/ConceptTaggerSample_Desktop/packages.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Microsoft.AI.Skills.SkillInterface" version="1.0.0" targetFramework="native" />
-  <package id="Microsoft.AI.Skills.Vision.ConceptTagger" version="1.0.0" targetFramework="native" />
+  <package id="Microsoft.AI.Skills.SkillInterface" version="1.1.0-preview" targetFramework="native" />
+  <package id="Microsoft.AI.Skills.Vision.ConceptTagger" version="1.1.0-preview" targetFramework="native" />
   <package id="Microsoft.VCRTForwarders.140" version="1.0.6" targetFramework="native" />
   <package id="Microsoft.Windows.CppWinRT" version="2.0.200316.3" targetFramework="native" />
 </packages>
