--- a/samples/ConceptTagger/cs/ConceptTaggerSample_NetCore3/ConceptTaggerSample_NetCore3.csproj
+++ b/samples/ConceptTagger/cs/ConceptTaggerSample_NetCore3/ConceptTaggerSample_NetCore3.csproj
@@ -8,8 +8,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AI.Skills.SkillInterface" Version="1.0.0" />
-    <PackageReference Include="Microsoft.AI.Skills.Vision.ConceptTagger" Version="1.0.0" />
+    <PackageReference Include="Microsoft.AI.Skills.SkillInterface" Version="1.1.0-preview" />
+    <PackageReference Include="Microsoft.AI.Skills.Vision.ConceptTagger" Version="1.1.0-preview" />
 	<PackageReference Include="Microsoft.VCRTForwarders.140" Version="1.0.6" />
   </ItemGroup>
   
