--- a/samples/ImageScanning/cs/ImageScanningSample_NetCore3/ImageScanningSample_NetCore3.csproj
+++ b/samples/ImageScanning/cs/ImageScanningSample_NetCore3/ImageScanningSample_NetCore3.csproj
@@ -8,7 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-	<PackageReference Include="Microsoft.AI.Skills.Vision.ImageScanning" Version="1.0.0" />
+	<PackageReference Include="Microsoft.AI.Skills.Vision.ImageScanning" Version="1.1.0-preview" />
 	<PackageReference Include="Microsoft.VCRTForwarders.140" Version="1.0.6" />
   </ItemGroup>
   
