--- a/samples/ObjectDetector/cs/ObjectDetectorSample_NetCore3/ObjectDetectorSample_NetCore3.csproj
+++ b/samples/ObjectDetector/cs/ObjectDetectorSample_NetCore3/ObjectDetectorSample_NetCore3.csproj
@@ -12,7 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AI.Skills.Vision.ObjectDetector" Version="1.0.0" />
+    <PackageReference Include="Microsoft.AI.Skills.Vision.ObjectDetector" Version="1.1.0-preview" />
     <PackageReference Include="Microsoft.VCRTForwarders.140" Version="1.0.6" />
     <PackageReference Include="Microsoft.Windows.SDK.Contracts" Version="10.0.18362.2005" />
   </ItemGroup>
