--- a/samples/SkeletalDetector/cs/SkeletalDetectorSample_NetCore3/SkeletalDetectorSample_NetCore3.csproj
+++ b/samples/SkeletalDetector/cs/SkeletalDetectorSample_NetCore3/SkeletalDetectorSample_NetCore3.csproj
@@ -12,7 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
-	<PackageReference Include="Microsoft.AI.Skills.Vision.SkeletalDetector" Version="1.0.0" />
+	<PackageReference Include="Microsoft.AI.Skills.Vision.SkeletalDetector" Version="1.1.0-preview" />
 	<PackageReference Include="Microsoft.VCRTForwarders.140" Version="1.0.6" />
   </ItemGroup>
   
