--- a/samples/ObjectDetector/cpp/ObjectDetectorSample_Desktop/ObjectDetectorTestApp_Desktop.vcxproj
+++ b/samples/ObjectDetector/cpp/ObjectDetectorSample_Desktop/ObjectDetectorTestApp_Desktop.vcxproj
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+  <Import Project="..\..\..\packages\Microsoft.Windows.CppWinRT.2.0.200917.4\build\native\Microsoft.Windows.CppWinRT.props" Condition="Exists('..\..\..\packages\Microsoft.Windows.CppWinRT.2.0.200917.4\build\native\Microsoft.Windows.CppWinRT.props')" />
   <ItemGroup Label="ProjectConfigurations">
     <ProjectConfiguration Include="Debug|Win32">
       <Configuration>Debug</Configuration>
@@ -134,6 +135,7 @@
     <Import Project="..\..\..\packages\Microsoft.VCRTForwarders.140.1.0.6\build\native\Microsoft.VCRTForwarders.140.targets" Condition="Exists('..\..\..\packages\Microsoft.VCRTForwarders.140.1.0.6\build\native\Microsoft.VCRTForwarders.140.targets')" />
     <Import Project="..\..\..\packages\Microsoft.AI.Skills.SkillInterface.1.1.0-preview\build\native\Microsoft.AI.Skills.SkillInterface.targets" Condition="Exists('..\..\..\packages\Microsoft.AI.Skills.SkillInterface.1.1.0-preview\build\native\Microsoft.AI.Skills.SkillInterface.targets')" />
     <Import Project="..\..\..\packages\Microsoft.AI.Skills.Vision.ObjectDetector.1.1.0-preview\build\native\Microsoft.AI.Skills.Vision.ObjectDetector.targets" Condition="Exists('..\..\..\packages\Microsoft.AI.Skills.Vision.ObjectDetector.1.1.0-preview\build\native\Microsoft.AI.Skills.Vision.ObjectDetector.targets')" />
+    <Import Project="..\..\..\packages\Microsoft.Windows.CppWinRT.2.0.200917.4\build\native\Microsoft.Windows.CppWinRT.targets" Condition="Exists('..\..\..\packages\Microsoft.Windows.CppWinRT.2.0.200917.4\build\native\Microsoft.Windows.CppWinRT.targets')" />
   </ImportGroup>
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
@@ -142,5 +144,7 @@
     <Error Condition="!Exists('..\..\..\packages\Microsoft.VCRTForwarders.140.1.0.6\build\native\Microsoft.VCRTForwarders.140.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\..\..\packages\Microsoft.VCRTForwarders.140.1.0.6\build\native\Microsoft.VCRTForwarders.140.targets'))" />
     <Error Condition="!Exists('..\..\..\packages\Microsoft.AI.Skills.SkillInterface.1.1.0-preview\build\native\Microsoft.AI.Skills.SkillInterface.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\..\..\packages\Microsoft.AI.Skills.SkillInterface.1.1.0-preview\build\native\Microsoft.AI.Skills.SkillInterface.targets'))" />
     <Error Condition="!Exists('..\..\..\packages\Microsoft.AI.Skills.Vision.ObjectDetector.1.1.0-preview\build\native\Microsoft.AI.Skills.Vision.ObjectDetector.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\..\..\packages\Microsoft.AI.Skills.Vision.ObjectDetector.1.1.0-preview\build\native\Microsoft.AI.Skills.Vision.ObjectDetector.targets'))" />
+    <Error Condition="!Exists('..\..\..\packages\Microsoft.Windows.CppWinRT.2.0.200917.4\build\native\Microsoft.Windows.CppWinRT.props')" Text="$([System.String]::Format('$(ErrorText)', '..\..\..\packages\Microsoft.Windows.CppWinRT.2.0.200917.4\build\native\Microsoft.Windows.CppWinRT.props'))" />
+    <Error Condition="!Exists('..\..\..\packages\Microsoft.Windows.CppWinRT.2.0.200917.4\build\native\Microsoft.Windows.CppWinRT.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\..\..\packages\Microsoft.Windows.CppWinRT.2.0.200917.4\build\native\Microsoft.Windows.CppWinRT.targets'))" />
   </Target>
 </Project>
