--- a/samples/SentimentAnalyzerCustomSkill/cs/Apps/FaceSentimentAnalysisApp_UWP/FaceSentimentAnalysisApp_UWP.csproj
+++ b/samples/SentimentAnalyzerCustomSkill/cs/Apps/FaceSentimentAnalysisApp_UWP/FaceSentimentAnalysisApp_UWP.csproj
@@ -145,13 +145,13 @@
       <Version>0.0.1</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.AI.Skills.SkillInterface">
-      <Version>1.0.0</Version>
+      <Version>1.1.0-preview</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform">
       <Version>6.2.10</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.Toolkit.Uwp.UI.Controls">
-      <Version>6.0.0</Version>
+      <Version>6.1.1</Version>
     </PackageReference>
   </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
