--- a/samples/SentimentAnalyzerCustomSkill/cs/Skill/FaceSentimentAnalyzer/Contoso.FaceSentimentAnalyzer_CS.csproj
+++ b/samples/SentimentAnalyzerCustomSkill/cs/Skill/FaceSentimentAnalyzer/Contoso.FaceSentimentAnalyzer_CS.csproj
@@ -127,7 +127,7 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.AI.Skills.SkillInterface">
-      <Version>1.0.0</Version>
+      <Version>1.1.0-preview</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform">
       <Version>6.2.10</Version>
